<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <EditText
        android:id="@+id/NAME"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/NameZ"/>
    <EditText
        android:id="@+id/MENGE"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/Menge"/>
    <EditText
        android:id="@+id/EINHEIT"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="4"
        android:hint="@string/EinehitZ"/>
</LinearLayout>